turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:22: error: not found: value MVT_SUIVANT
  rule(state)(a)(MVT_SUIVANT) match {
                 ^